yamlファイルを修正

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,13 +20,13 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
+          profile: terraform
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.9.5
 
-          
       - name: Terraform Init
         run: terraform init
 
