--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,7 +3,7 @@ name: Terraform Plan and Apply
 on:
   push:
     branches:
-      - develop # 特定のブランチを指定
+      - develop
 
 jobs:
   terraform:
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
-        with:
+        uses: aws-actions/configure-aws-credentials@v4
+        with:          
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
