--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,8 +19,8 @@ jobs:
         with:          
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-1
-          profile: terraform
+          aws-region: ap-northeast-1 
+                   
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
@@ -34,5 +34,5 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/develop' # 特定のブランチでのみ適用
+        if: github.ref == 'refs/heads/develop'
         run: terraform apply -auto-approve
